[package]
name = "garden"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
delegate = "0.13.5"
mimalloc = "0.1.48"
peak_alloc = { version = "0.3.0", optional = true }
rayon = { version = "1.11.0", optional = true }

[features]
memtrack = ["dep:peak_alloc"]
par = ["dep:rayon"]
