[package]
name = "garden"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1
# panic = "abort"

[lib]
crate-type = ["staticlib"]

[dependencies]
delegate = "0.13.5"
getset = "0.1.6"
mimalloc = "0.1.48"
no-panic = "0.1.36"
peak_alloc = { version = "0.3.0", optional = true }
rayon = { version = "1.11.0", optional = true }

[features]
default = ["par"]
mem = ["dep:peak_alloc"]
par = ["dep:rayon"]
